tests/fixtures/typeck/immutable_assignment.diag
error: cannot assign to immutable binding
  --> immutable_assignment.veyl:3:5
   |
  3 |     value = 2;
   |     ^^^^^
