tests/fixtures/typeck/immutable_assignment.veyl
fn main() {
    let value = 1;
    value = 2;
}
